crates/swc_ecma_parser/tests/errors/issue-8687/input.ts
class Foo {
    private #p1() { }
    private #p2: number;
}